<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.icloud.ganlensystems.pumitaschool.Fragment_Contacto">


    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">


            <ImageView
                android:src="@drawable/ganlen_blanco"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerInside"
                android:layout_gravity="center"
                android:layout_margin="8dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:scaleType="centerInside"
                      android:text="Nuestro Objetivo"
                      android:textAlignment="center"

                      android:textStyle="bold"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/colorBlanco"

                      android:text="Facilitar la vida de las personas en todas las industrias mediante innovadores productos de software cloud computing de alta calidad para así también reducir la brecha tecnológica en los países de América Latina y países de tercer mundo."/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/raul"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco" android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/david"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco" android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/fernando"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco" android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/efrain"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco" android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/dulce"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco" android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/bryan"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco" android:textSize="16sp"/>

            <TextView
                android:text="@string/website"
                android:backgroundTint="@color/colorBlanco"
                android:id="@+id/website_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/Gris"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
               />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/copyright"
                android:textAlignment="center" android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>


