<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/AZULNEW"
    android:layout_height="match_parent"
    tools:context="com.icloud.ganlensystems.pumitaschool.bienvenido">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.056"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/puma"
                android:layout_width="match_parent" android:layout_height="171dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/puma"/>
            <TextView
                android:id="@+id/tv_pumitascool_letter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="pumitaschool"
                android:textAlignment="center"

                android:textColor="@color/colorAccent" android:textSize="30sp"
                android:visibility="visible"/>
            <TextView
                android:id="@+id/TV_IngresaBienvenida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:lineSpacingExtra="14sp"

                android:text="@string/I_BienvenidoIngresar"
                android:textAlignment="center" android:textColor="@color/Verde_Espacial"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/ET_EmailAlumno"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/TV_Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlanco"
                android:textColorHint="@color/colorBlanco"
            />
            <EditText
                android:id="@+id/ET_PassAlumno"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/TV_Pass"
                android:inputType="textPassword"
                android:textColor="@color/colorBlanco"

                android:textColorHint="@color/colorBlanco"/>
            <Button
                android:id="@+id/BTN_IngresarAlumno"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_registro_login"
                android:onClick="BTN_Ingresa_Alumno_Click"
                android:text="@string/I_Ingresa"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco"/>
            <TextView
                android:id="@+id/TV_RecuperarContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/Recuperar"
                android:textAlignment="center"
                android:textColor="@color/Verde_Espacial"
                tools:layout_editor_absoluteX="145dp" tools:layout_editor_absoluteY="356dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:indeterminate="true"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/TV_Registro_Alumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center" android:text="@string/Cuenta_Alumno"
                android:textColor="@color/Verde_Espacial"/>



        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
